# access-exodus

./: .gitignore  LICENSE  README.md  README.rst  accex_config.py  accex_gui.py  accex_process.py  config.accex  example_config.accex  main.py  pyproject.toml  requirements.txt
.github/workflows/: assets.yml  docs.yml  test.yml  tests.yml
accex/: __main__.py
accex/config/: __init__.py  __main__.py  core.py
accex/gui/: core.py
accex/process/: __main__.py  core.py  util.py
docs/source/: conf.py  config.rst  index.rst  modules.rst  usage.rst
docs/source/_static/: styles.css
docs/source/accex/: config.rst
scripts/: gen_init.py  host_docs.bat  odbc_driver.py
src/: accex_config.py  accex_process.py
src/accex/: __main__.py
src/accex/config/: __init__.py  __main__.py
src/accex/process/: __init__.py  __main__.py  core.py
tests/: test_config.py  test_process.py  util.py
tests/configs/: config.accex  config_answer.json  config_env_vars.accex  config_env_vars_answer.accex  config_invalid_source_connection.accex
tests/databases/: database_a.accdb  database_b.accdb
