[tool.poetry]
name = "access-exodus"
version = "0.1.0"
description = ""
authors = ["Matthew <mchen146@ucsc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pyodbc = "^5.0.1"
aioodbc = "^0.5.0"
typing-extensions = "^4.8.0"
typeguard = "^4.1.5"
pyparsing = "^3.1.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.gui]
optional = true
[tool.poetry.group.gui.dependencies]
pyside6 = "^6.6.0"
pyedifice = "^0.2.1"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[tool.poetry.group.build]
optional = true
[tool.poetry.group.build.dependencies]
pyinstaller = "^6.2.0"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
log_cli = true
log_cli_level = 10
log_file = "misc/pytest_log.txt"
addopts = "--cov-report=term --cov-report=xml --cov=src --cov-config=pyproject.toml --tb=line --junitxml=reports/junit/junit.xml"

[tool.coverage.run]
omit = [
    "**/__main__.py",
    "src/accex/gui/*"
]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
